Added models for Room and RoomUser. Restricted room access to users who are in that room.

--- a/mysite/chat/templates/chat/room.html
+++ b/mysite/chat/templates/chat/room.html
@@ -6,12 +6,12 @@
     <title>Chat Room</title>
 </head>
 <body>
-<h3>Room: {{ room_name }}</h3>
+<h3>Room: {{ room.name }}</h3>
 <h5>Connected as: {{ user.username }}</h5>
     <textarea id="chat-log" cols="100" rows="20" readonly></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
-    {{ room_name|json_script:"room-name" }}
+    {{ room.name|json_script:"room-name" }}
     <script>
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
